[workspace.package]
edition = "2021"
license = "Apache-2.0"

## All dependency versions, used in the project
[workspace.dependencies]
libloading = "0.8"
openssl = {version = "0.10", features = ["vendored"]}

[workspace]
members = [
  "src/bin/meshx",
  "src/crates/midl",
  "src/crates/fiber_rust",
  "src/crates/meshx_component",
  "src/crates/meshx_runtime",
  "src/crates/meshx_flow",
  "src/crates/component_dummy",
  "src/crates/datasources",
  "src/crates/fiber_sys",
  "src/crates/fiber_types",
  "src/crates/fiber_status",
  "src/crates/fiber_kernel",
  "experiments/wasm_tcp",
  "experiments/wasm_host",
  "tools/midl/midlc",
  "tools/midl/midlgen",
  "tools/midl/midlgen_ts",
  "tools/midl/midlgen_rust",
  "src/sys/pkg/lib/package-tool",
  "src/lib/meshx-url",
  "src/sys/pkg/bin/package-tool",
]
resolver = "2"

[profile.release]
debug = true
