[workspace.package]
authors = []
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/meshx-org/meshx"
rust-version = "1.80.0"
version = "0.1.0"

[workspace.lints.rust]
#unsafe_code = "forbid"

## All dependency versions, used in the project
[workspace.dependencies]
ahash = "0.7.8"
anyhow = "1.0"
assert-json-diff = "2.0.2"
async-stream = "0.3.5"
async-trait = "0.1.80"
axum = {version = "0.7.5", features = ["macros"]}
backoff = "0.4.0"
chrono = "0.4.38"
darling = "0.20.9"
derivative = "2.2.0"
env_logger = "0.11"
etcd-client = "0.13"
form_urlencoded = "1.1"
futures = "0.3.30"
go-parse-duration = "0.1"
http = "1.1"
hashbrown="0.14.5"
hyper = "1.0"
json-patch = "1.0"
lazy_static = "1.4"
libloading = "0.8"
openssl = {version = "0.10", features = ["vendored"]}
parking_lot = "0.12.3"
pin-project = "1.1"
pot = "3.0"
proc-macro2 = "1.0.84"
quote = "1.0"
rkyv = {version = "^0.7"}
schemars = "0.8"
serde = "1"
serde_json = "1.0"
serde_yml = "0.0.10"
smallvec = "1.13.2"
syn = "2.0"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
tokio-test = "0.4.4"
tokio-util = "0.7.11"
tower = {version = "0.4.13", features = ["util"]}
tower-test = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

[workspace]
members = [
  "src/bin/meshx",
  "src/bin/controller",
  "src/bin/controlplane",
  "src/crates/midl",
  "src/crates/fiber_rust",
  "src/crates/meshx_component",
  "src/crates/meshx_runtime",
  "src/crates/controlplane_derive",
  "src/crates/controlplane_core",
  "src/crates/controlplane_runtime",
  "src/crates/controlplane_client",
  "src/crates/component_manager",
  "src/crates/meshx_runtime",
  "src/crates/meshx_flow",
  "src/crates/cm_config",
  "src/crates/cm_types",
  "src/crates/meshx_macro",
  "src/crates/fiber_wasi_polyfill",
  "src/crates/component_dummy",
  "src/crates/datasources",
  "src/crates/fiber_sys",
  "src/crates/fiber_types",
  "src/crates/fiber_status",
  "src/crates/fiber_kernel",
  "experiments/wasm_host",
  "tools/midl/midlc",
  "tools/midl/midlgen",
  "tools/midl/midlgen_ts",
  "tools/midl/midlgen_rust",
  "src/sys/pkg/lib/package-tool",
  "src/sys/pkg/lib/meshx-repo",
  "src/lib/meshx-url",
  "src/sys/pkg/bin/package-tool", "src/crates/component",
]
resolver = "2"

[profile.release]
debug = true
