[package]
name = "fiber_kernel"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fiber_sys = {version = "0.1.0", path = "../fiber_sys"}
log="0.4.16"
smol="1.2.5"
static_assertions = "1.1"
once_cell="1.10.0"