[package]
edition = "2021"
name = "wasm_host"
version = "0.1.0"

[dependencies]
env_logger = {version = "0.10"}
libloading = "0.7.4"
tikv-client = "0.1.0"
wasm_tcp = {path = "../wasm_tcp", version = "0.1.0"}
tokio = { version = "1", features = ["full"] }
wasmedge-sdk = {version="0.7.1", features = ["async"]}
anyhow = "1.0.40"