[package]
edition = "2021"
name = "buildtool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace = true}
globwalker = "0.9.0"
hcl-rs = "0.18.0"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"

[package.metadata.buildtool]
target-name = "bin"