[package]
authors = ["Roland Sz. Kovács <Roland.Szarka-Kovacs@meshx.co>"]
edition = "2018"
name = "mxpm"
version = "0.1.0"

[dependencies]
adler = "=1.0.2"
clap = "2.33"
directories = "3.0"
futures-util = "=0.3.17"
http = "=0.2.0"
hyper = {version="=0.14.20", features = ["full"]}
hyper-staticfile = "=0.6.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8"
tar = "0.4"
tokio = {version = "1.10", features = ["full"]}
