[package]
edition = "2021"
name = "component_manager"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cm_config = {version = "0.1.0", path = "../cm_config"}
cm_types = {version = "0.1.0", path = "../cm_types"}
custom-print = "1.0.0"
fiber_rust = {version = "0.1.0", path = "../fiber_rust"}
fiber_sys = {path = "../fiber_sys"}
fiber_wasi_polyfill = {path = "../fiber_wasi_polyfill"}
log = "0.4"
meshx_async = {path = "../meshx_async"}
moniker = {version = "0.1.0", path = "../moniker"}
thiserror = "1.0.30"
url = "2.5.2"

[package.metadata.meshx-component]
component-name = "component_manager"
manifest = "meta/component_manager.cml"

[package.metadata.meshx-package]
package-name = "component-manager"

[profile.dev]
dwarf-debug-info = true

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
strip = "debuginfo"
