[package]
edition = "2021"
name = "controlplane_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

bytes = "1.6"
controlplane_core = {path = "../controlplane_core"}
futures.workspace = true
http-body = "1.0"
http-body-util = "0.1.1"
http.workspace = true
hyper-timeout = "0.5.1"
hyper-util = "0.1.3"
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace=true
tower-http = {version = "0.5.2", features = ["map-response-body", "trace"]}
tower.workspace = true
tracing.workspace = true
[dev-dependencies]

[features]
client = []
default = ["client"]
gzip = ["client", "tower-http/decompression-gzip"]
jsonpatch = ["controlplane_core/jsonpatch"]