[package]
name = "fiber_kernel"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fiber_sys = {version = "0.1.0", path = "../fiber_sys"}
fiber_rust = {version = "0.1.0", path = "../fiber_rust"}

tokio = {version = "1.24.1", features = ["rt-multi-thread", "macros"]}
rand="0.8.4"
log="0.4.17"
smol="1.2.5"
static_assertions = "1.1"
once_cell="1.17.1"
typed-arena="2.0.1"
generational-arena = "0.2"
id-arena = "2.2.1"
switcheroo = "0.2.9"
tracing = "0.1"
thiserror = "1.0.30"
num-traits = "0.2"
num-derive = "0.4"
memoffset = "0.9"