[package]
edition = "2021"
name = "fiber_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
fiber_sys = {version = "0.1.0", path = "../fiber_sys"}
fiber_types = {version = "0.1.0", path = "../fiber_types"}
fiber_status = {version = "0.1.0", path = "../fiber_status"}
log = "0.4.17"
thiserror = "1.0.32"

[profile.release]
panic = 'abort'
codegen-units = 1
debug = false
lto = true
opt-level = 'z'
strip = "debuginfo"