[package]
name = "fiber_wasi_polyfill"
version = "0.5.1"
edition = "2021"
keywords = ["fiber", "wasi", "wasi-polyfill"]
description = "The project provides polyfill implementation of *wasi_unstable* and *wasi_snapshot_preview1* functions using Fiber Syscalls."
license = "MIT"

[dependencies]
function_name = "0.3.0"
fiber_sys = { path = "../fiber_sys" }

[features]
report_wasi_calls=[]
skip_unimplemented_functions=[]

[lib]
crate-type = ["staticlib", "lib"]

[dev-dependencies]
candid = "0.10.8"

[profile.release]
panic = 'abort'
codegen-units = 1
debug = false
lto = true
opt-level = 'z'
strip = "debuginfo"