[package]
edition = "2021"
name = "midlc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.4", features=["derive"]}
hcl-rs = "0.12.3"
midlgen = {path = "../midlgen", version = "0.1.0"}
serde = "1.0.152"
serde_json = "1.0.107"
colored = "2.0.0"
petgraph = "0.6.3"
thiserror = "1.0.38"
pest = "2.0"
pest_derive = "2.0"
log = "0.4.17"