[package]
edition = "2021"
name = "midlc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
colored = "2.0.0"
env_logger = "0.10.0"
hcl-rs = "0.12.3"
multimap="0.9"
log = "0.4.17"
midlgen = {path = "../midlgen", version = "0.1.0"}
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.6.3"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
derivative="2.2"
anyhow="1.0"
num="0.4"