[package]
edition = "2021"
name = "midlgen_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
iota = "0.2.3"
midlgen = {path = "../midlgen", version = "0.1.0"}
serde = "1.0.152"
serde_json = "1.0.94"
thiserror = "1.0.38"
clap = { version="4.1.4", features=["derive"]}