[package]
edition = "2021"
name = "midlgen_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "5.1.1"
iota = "0.2.3"
midlgen = {path = "../midlgen", version = "0.1.0"}
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
clap = { version="4.1.4", features=["derive"]}
lazy_static="1.4"
convert_case="0.6"