[package]
edition = "2021"
name = "midlgen_ts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota = "0.2.3"
midlgen = {path = "../midlgen", version = "0.1.0"}
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
convert_case="0.6"
lazy_static="1.5"
clap = { version="4.1.4", features=["derive"]}
tera = { version = "1", default-features = false }
sheller = "0.5.3"