[package]
authors = ["Roland Sz. Kovács <Roland.Szarka-Kovacs@meshx.co>"]
edition = "2021"
name = "meshx-archive"
version = "0.1.0"

[dependencies]
static_assertions="1.0"
thiserror="1.0"
zerocopy={version="=0.8.0-alpha.2",features = ["derive"]}

[dev-dependencies]
assert_matches="1.0"
itertools="0.12"
tokio={version="1.0", features = ["full"]}