[package]
authors = ["Roland Sz. Kovács <Roland.Szarka-Kovacs@meshx.co>"]
edition = "2021"
name = "meshx-pkg-midl-ext"
version = "0.1.0"

[dependencies]
hex = "0.4"
http = "1.0"
meshx-hash = {path = "../meshx-hash"}
meshx-url = {path = "../../../../lib/meshx-url"}
proptest = {version="1.0",features = []}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
typed-builder = "0.18"

[dev-dependencies]
assert_matches="1.5"
serde_json="1.0"