[package]
authors = ["Roland Sz. Kovács <Roland.Szarka-Kovacs@meshx.co>"]
edition = "2021"
name = "meshx-pkg"
version = "0.1.0"


[dependencies]
serde={version="1.0",features = ["derive"]}
serde_json="1.0"
camino={version="1.1",features = ["serde1"]}
anyhow="1.0"
tempfile="3.9"
thiserror="1.0"
walkdir="2.4"
meshx-hash={path = "../meshx-hash"}
tempfile-ext={path = "../tempfile-ext"}
meshx-archive={path = "../meshx-archive"}
meshx-url={path = "../../../../lib/meshx-url"}
utf8-path={path = "../../../../lib/utf8-path"}
version-history={path = "../../../../lib/version-history"}
meshx-merkle={path = "../meshx-merkle"}
proptest="1.0"

[dev-dependencies]
tokio={version = "1", features = ["full"]}
pretty_assertions="1.4"
assert_matches="1.5"
lazy_static="1.3"
regex="1.10"
maplit="1.0"
rand="0.8"