[package]
authors = ["Roland Sz. Kovács <Roland.Szarka-Kovacs@meshx.co>"]
edition = "2021"
name = "package_tool_lib"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
argh = "0.1"
camino = "1.0"
meshx-merkle = {path = "../meshx-merkle"}
meshx-pkg = {path = "../meshx-pkg"}
serde = "1"
serde_json = "1"
tempfile = "3.9"
tempfile-ext = {path = "../tempfile-ext"}
version-history = {path = "../../../../lib/version-history"}

[dev-dependencies]
#meshx-archive = {path = "../meshx-archive"}
#pretty_assertions = "1.0"
#tokio = {version = "1", features = ["full"]}
